--- a/sass/plugins/woocommerce/_checkout.scss
+++ b/sass/plugins/woocommerce/_checkout.scss
@@ -34,7 +34,7 @@
 
 		.woocommerce-billing-fields__field-wrapper {
 			display: grid;
-			grid-template-columns: 1fr 1fr;
+			grid-template-columns: 35% 65%;
 		}
 
 		#billing_address_2_field {
